--- a/hw2.html
+++ b/hw2.html
@@ -27,8 +27,8 @@
                     <input id="drawLineF" value="Draw Line" class="submit2" type="button" />
                     <input id="drawEllipseF" value="Draw Ellipse" class="submit2" type="button" />
                 </p>
-                <span>Ratio: </span><input id="Frac_Ratio" class="enter" type="number" min="0" max="1" value="0" step="0.1" />
-                <span>Iterations: </span><input id="Frac_Iterations" class="enter" type="number" value="0" step="1"/>
+                <p><span>Ratio: 1 / </span><input id="Frac_Ratio" class="enter" type="number" min="2" max="20" value="2" step="1" /></p>
+                <p><span>Iterations: </span><input id="Frac_Iterations" class="enter" type="number" value="0" step="1"/></p>
             </div>
             <div><p>Click two different points on the screen to draw your fractal!</p></div>
         </div>
